src/cst_gen/CstParser.java
// Generated from C:/repo_symaut/sym_automata/src/cst_parser/CstParser.g4 by ANTLR 4.5.3

package cst_gen;

import java.util.List;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class CstParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int LPAREN = 1, RPAREN = 2, NotOperator = 3, OrOperator = 4, AndOperator = 5, EqualOperator = 6,
			NotEqualOperator = 7, GreaterOrEqualOperator = 8, LesserOrEqualOperator = 9, GreaterOperator = 10,
			LesserOperator = 11, BooleanLiteral = 12, TRUE = 13, FALSE = 14, IntegerLiteral = 15, Identifier = 16,
			LINE_TERMINATOR = 17, WHITESPACE = 18, COMMENT = 19, LINE_COMMENT = 20;
	public static final int RULE_cst = 0, RULE_expression = 1, RULE_equalityCmpOp = 2, RULE_comparisonOp = 3,
			RULE_primary = 4, RULE_booleanLiteral = 5, RULE_integerLiteral = 6, RULE_identifier = 7;
	public static final String[] ruleNames = { "cst", "expression", "equalityCmpOp", "comparisonOp", "primary",
			"booleanLiteral", "integerLiteral", "identifier" };

	private static final String[] _LITERAL_NAMES = {};
	private static final String[] _SYMBOLIC_NAMES = { null, "LPAREN", "RPAREN", "NotOperator", "OrOperator",
			"AndOperator", "EqualOperator", "NotEqualOperator", "GreaterOrEqualOperator", "LesserOrEqualOperator",
			"GreaterOperator", "LesserOperator", "BooleanLiteral", "TRUE", "FALSE", "IntegerLiteral", "Identifier",
			"LINE_TERMINATOR", "WHITESPACE", "COMMENT", "LINE_COMMENT" };
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "CstParser.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public CstParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class CstContext extends ParserRuleContext {
		public CstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_cst;
		}

		public CstContext() {
		}

		public void copyFrom(CstContext ctx) {
			super.copyFrom(ctx);
		}
	}

	public static class CstExprContext extends CstContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class, 0);
		}

		public TerminalNode EOF() {
			return getToken(CstParser.EOF, 0);
		}

		public CstExprContext(CstContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterCstExpr(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitCstExpr(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitCstExpr(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final CstContext cst() throws RecognitionException {
		CstContext _localctx = new CstContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_cst);
		try {
			_localctx = new CstExprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
				setState(16);
				expression(0);
				setState(17);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_expression;
		}

		public ExpressionContext() {
		}

		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}

	public static class ExprPrimaryContext extends ExpressionContext {
		public PrimaryContext primary() {
			return getRuleContext(PrimaryContext.class, 0);
		}

		public ExprPrimaryContext(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterExprPrimary(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitExprPrimary(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitExprPrimary(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class ExprNotUnaryExprContext extends ExpressionContext {
		public TerminalNode NotOperator() {
			return getToken(CstParser.NotOperator, 0);
		}

		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class, 0);
		}

		public ExprNotUnaryExprContext(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterExprNotUnaryExpr(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitExprNotUnaryExpr(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitExprNotUnaryExpr(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class IdCompInt1Context extends ExpressionContext {
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class, 0);
		}

		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class, 0);
		}

		public ComparisonOpContext comparisonOp() {
			return getRuleContext(ComparisonOpContext.class, 0);
		}

		public EqualityCmpOpContext equalityCmpOp() {
			return getRuleContext(EqualityCmpOpContext.class, 0);
		}

		public IdCompInt1Context(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterIdCompInt1(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitIdCompInt1(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitIdCompInt1(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class ExprAndContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}

		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class, i);
		}

		public TerminalNode AndOperator() {
			return getToken(CstParser.AndOperator, 0);
		}

		public ExprAndContext(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterExprAnd(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitExprAnd(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitExprAnd(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class IdCompInt2Context extends ExpressionContext {
		public List<IntegerLiteralContext> integerLiteral() {
			return getRuleContexts(IntegerLiteralContext.class);
		}

		public IntegerLiteralContext integerLiteral(int i) {
			return getRuleContext(IntegerLiteralContext.class, i);
		}

		public ComparisonOpContext comparisonOp() {
			return getRuleContext(ComparisonOpContext.class, 0);
		}

		public EqualityCmpOpContext equalityCmpOp() {
			return getRuleContext(EqualityCmpOpContext.class, 0);
		}

		public IdCompInt2Context(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterIdCompInt2(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitIdCompInt2(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitIdCompInt2(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class ExprEqualExprContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}

		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class, i);
		}

		public EqualityCmpOpContext equalityCmpOp() {
			return getRuleContext(EqualityCmpOpContext.class, 0);
		}

		public ExprEqualExprContext(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterExprEqualExpr(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitExprEqualExpr(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitExprEqualExpr(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class ExprNotUnaryIdContext extends ExpressionContext {
		public TerminalNode NotOperator() {
			return getToken(CstParser.NotOperator, 0);
		}

		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class, 0);
		}

		public ExprNotUnaryIdContext(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterExprNotUnaryId(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitExprNotUnaryId(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitExprNotUnaryId(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class ExprOrContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}

		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class, i);
		}

		public TerminalNode OrOperator() {
			return getToken(CstParser.OrOperator, 0);
		}

		public ExprOrContext(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterExprOr(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitExprOr(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitExprOr(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class IdCompInt0Context extends ExpressionContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class, 0);
		}

		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class, 0);
		}

		public ComparisonOpContext comparisonOp() {
			return getRuleContext(ComparisonOpContext.class, 0);
		}

		public EqualityCmpOpContext equalityCmpOp() {
			return getRuleContext(EqualityCmpOpContext.class, 0);
		}

		public IdCompInt0Context(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterIdCompInt0(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitIdCompInt0(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitIdCompInt0(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class IdCompIdContext extends ExpressionContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}

		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class, i);
		}

		public ComparisonOpContext comparisonOp() {
			return getRuleContext(ComparisonOpContext.class, 0);
		}

		public EqualityCmpOpContext equalityCmpOp() {
			return getRuleContext(EqualityCmpOpContext.class, 0);
		}

		public IdCompIdContext(ExpressionContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterIdCompId(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitIdCompId(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitIdCompId(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(53);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
				case 1: {
					_localctx = new ExprPrimaryContext(_localctx);
					_ctx = _localctx;
					_prevctx = _localctx;

					setState(20);
					primary();
				}
					break;
				case 2: {
					_localctx = new ExprNotUnaryExprContext(_localctx);
					_ctx = _localctx;
					_prevctx = _localctx;
					setState(21);
					match(NotOperator);
					setState(22);
					expression(9);
				}
					break;
				case 3: {
					_localctx = new ExprNotUnaryIdContext(_localctx);
					_ctx = _localctx;
					_prevctx = _localctx;
					setState(23);
					match(NotOperator);
					setState(24);
					identifier();
				}
					break;
				case 4: {
					_localctx = new IdCompIdContext(_localctx);
					_ctx = _localctx;
					_prevctx = _localctx;
					setState(25);
					identifier();
					setState(28);
					switch (_input.LA(1)) {
					case GreaterOrEqualOperator:
					case LesserOrEqualOperator:
					case GreaterOperator:
					case LesserOperator: {
						setState(26);
						comparisonOp();
					}
						break;
					case EqualOperator:
					case NotEqualOperator: {
						setState(27);
						equalityCmpOp();
					}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(30);
					identifier();
				}
					break;
				case 5: {
					_localctx = new IdCompInt0Context(_localctx);
					_ctx = _localctx;
					_prevctx = _localctx;
					setState(32);
					identifier();
					setState(35);
					switch (_input.LA(1)) {
					case GreaterOrEqualOperator:
					case LesserOrEqualOperator:
					case GreaterOperator:
					case LesserOperator: {
						setState(33);
						comparisonOp();
					}
						break;
					case EqualOperator:
					case NotEqualOperator: {
						setState(34);
						equalityCmpOp();
					}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(37);
					integerLiteral();
				}
					break;
				case 6: {
					_localctx = new IdCompInt1Context(_localctx);
					_ctx = _localctx;
					_prevctx = _localctx;
					setState(39);
					integerLiteral();
					setState(42);
					switch (_input.LA(1)) {
					case GreaterOrEqualOperator:
					case LesserOrEqualOperator:
					case GreaterOperator:
					case LesserOperator: {
						setState(40);
						comparisonOp();
					}
						break;
					case EqualOperator:
					case NotEqualOperator: {
						setState(41);
						equalityCmpOp();
					}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(44);
					identifier();
				}
					break;
				case 7: {
					_localctx = new IdCompInt2Context(_localctx);
					_ctx = _localctx;
					_prevctx = _localctx;
					setState(46);
					integerLiteral();
					setState(49);
					switch (_input.LA(1)) {
					case GreaterOrEqualOperator:
					case LesserOrEqualOperator:
					case GreaterOperator:
					case LesserOperator: {
						setState(47);
						comparisonOp();
					}
						break;
					case EqualOperator:
					case NotEqualOperator: {
						setState(48);
						equalityCmpOp();
					}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(51);
					integerLiteral();
				}
					break;
				}
				_ctx.stop = _input.LT(-1);
				setState(67);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						if (_parseListeners != null)
							triggerExitRuleEvent();
						_prevctx = _localctx;
						{
							setState(65);
							_errHandler.sync(this);
							switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
							case 1: {
								_localctx = new ExprEqualExprContext(new ExpressionContext(_parentctx, _parentState));
								pushNewRecursionContext(_localctx, _startState, RULE_expression);
								setState(55);
								if (!(precpred(_ctx, 3)))
									throw new FailedPredicateException(this, "precpred(_ctx, 3)");
								setState(56);
								equalityCmpOp();
								setState(57);
								expression(4);
							}
								break;
							case 2: {
								_localctx = new ExprAndContext(new ExpressionContext(_parentctx, _parentState));
								pushNewRecursionContext(_localctx, _startState, RULE_expression);
								setState(59);
								if (!(precpred(_ctx, 2)))
									throw new FailedPredicateException(this, "precpred(_ctx, 2)");
								setState(60);
								match(AndOperator);
								setState(61);
								expression(3);
							}
								break;
							case 3: {
								_localctx = new ExprOrContext(new ExpressionContext(_parentctx, _parentState));
								pushNewRecursionContext(_localctx, _startState, RULE_expression);
								setState(62);
								if (!(precpred(_ctx, 1)))
									throw new FailedPredicateException(this, "precpred(_ctx, 1)");
								setState(63);
								match(OrOperator);
								setState(64);
								expression(2);
							}
								break;
							}
						}
					}
					setState(69);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class EqualityCmpOpContext extends ParserRuleContext {
		public EqualityCmpOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_equalityCmpOp;
		}

		public EqualityCmpOpContext() {
		}

		public void copyFrom(EqualityCmpOpContext ctx) {
			super.copyFrom(ctx);
		}
	}

	public static class NeqOpContext extends EqualityCmpOpContext {
		public TerminalNode NotEqualOperator() {
			return getToken(CstParser.NotEqualOperator, 0);
		}

		public NeqOpContext(EqualityCmpOpContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterNeqOp(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitNeqOp(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitNeqOp(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class EqOpContext extends EqualityCmpOpContext {
		public TerminalNode EqualOperator() {
			return getToken(CstParser.EqualOperator, 0);
		}

		public EqOpContext(EqualityCmpOpContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterEqOp(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitEqOp(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitEqOp(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final EqualityCmpOpContext equalityCmpOp() throws RecognitionException {
		EqualityCmpOpContext _localctx = new EqualityCmpOpContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_equalityCmpOp);
		try {
			setState(72);
			switch (_input.LA(1)) {
			case EqualOperator:
				_localctx = new EqOpContext(_localctx);
				enterOuterAlt(_localctx, 1); {
				setState(70);
				match(EqualOperator);
			}
				break;
			case NotEqualOperator:
				_localctx = new NeqOpContext(_localctx);
				enterOuterAlt(_localctx, 2); {
				setState(71);
				match(NotEqualOperator);
			}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonOpContext extends ParserRuleContext {
		public ComparisonOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_comparisonOp;
		}

		public ComparisonOpContext() {
		}

		public void copyFrom(ComparisonOpContext ctx) {
			super.copyFrom(ctx);
		}
	}

	public static class CmpOpGteContext extends ComparisonOpContext {
		public TerminalNode GreaterOrEqualOperator() {
			return getToken(CstParser.GreaterOrEqualOperator, 0);
		}

		public CmpOpGteContext(ComparisonOpContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterCmpOpGte(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitCmpOpGte(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitCmpOpGte(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class CmpOpLseContext extends ComparisonOpContext {
		public TerminalNode LesserOperator() {
			return getToken(CstParser.LesserOperator, 0);
		}

		public CmpOpLseContext(ComparisonOpContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterCmpOpLse(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitCmpOpLse(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitCmpOpLse(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class CmpOpGtContext extends ComparisonOpContext {
		public TerminalNode GreaterOperator() {
			return getToken(CstParser.GreaterOperator, 0);
		}

		public CmpOpGtContext(ComparisonOpContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterCmpOpGt(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitCmpOpGt(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitCmpOpGt(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public static class CmpOpLsContext extends ComparisonOpContext {
		public TerminalNode LesserOrEqualOperator() {
			return getToken(CstParser.LesserOrEqualOperator, 0);
		}

		public CmpOpLsContext(ComparisonOpContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterCmpOpLs(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitCmpOpLs(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CstParserVisitor)
				return ((CstParserVisitor<? extends T>) visitor).visitCmpOpLs(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ComparisonOpContext comparisonOp() throws RecognitionException {
		ComparisonOpContext _localctx = new ComparisonOpContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comparisonOp);
		try {
			setState(78);
			switch (_input.LA(1)) {
			case LesserOrEqualOperator:
				_localctx = new CmpOpLsContext(_localctx);
				enterOuterAlt(_localctx, 1); {
				setState(74);
				match(LesserOrEqualOperator);
			}
				break;
			case GreaterOrEqualOperator:
				_localctx = new CmpOpGteContext(_localctx);
				enterOuterAlt(_localctx, 2); {
				setState(75);
				match(GreaterOrEqualOperator);
			}
				break;
			case LesserOperator:
				_localctx = new CmpOpLseContext(_localctx);
				enterOuterAlt(_localctx, 3); {
				setState(76);
				match(LesserOperator);
			}
				break;
			case GreaterOperator:
				_localctx = new CmpOpGtContext(_localctx);
				enterOuterAlt(_localctx, 4); {
				setState(77);
				match(GreaterOperator);
			}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryContext extends ParserRuleContext {
		public PrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_primary;
		}

		public PrimaryContext() {
		}

		public void copyFrom(PrimaryContext ctx) {
			super.copyFrom(ctx);
		}
	}

	public static class PrimaryLiteralBoolContext extends PrimaryContext {
		public BooleanLiteralContext booleanLiteral() {
			return getRuleContext(BooleanLiteralContext.class, 0);
		}

		public PrimaryLiteralBoolContext(PrimaryContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).enterPrimaryLiteralBool(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CstParserListener)
				((CstParserListener) listener).exitPrimaryLiteralBool(this);
		}
